--- a/package.json
+++ b/package.json
@@ -4,23 +4,28 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/app.ts"
+    "dev": "ts-node-dev --respawn --transpile-only src/app.ts",
+    "test": "jest --detectOpenHandles",
+    "test-and-watch": "jest --detectOpenHandles --watchAll"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
     "config": "^3.3.7",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dayjs": "^1.11.4",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
+    "mongodb-memory-server": "^8.8.0",
     "mongoose": "^6.4.6",
     "nanoid": "^4.0.0",
     "pino": "^8.3.0",
     "pino-pretty": "^8.1.0",
+    "winston": "^3.8.1",
     "zod": "^3.17.9"
   },
   "devDependencies": {
@@ -29,12 +34,17 @@
     "@types/config": "^0.0.41",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/jest": "^28.1.6",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/lodash": "^4.14.182",
     "@types/mongoose": "^5.11.97",
     "@types/nanoid": "^3.0.0",
     "@types/node": "^18.0.6",
     "@types/pino": "^7.0.5",
+    "@types/supertest": "^2.0.12",
+    "jest": "^28.1.3",
+    "supertest": "^6.2.4",
+    "ts-jest": "^28.0.7",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.4"
   }
